--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@tanstack/react-query": "5.59.15",
     "axios": "1.7.7",
     "clsx": "2.1.1",
-    "next": "14.2.10",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "next": "^14.2.10",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "sonner": "1.5.0",
     "zod": "3.23.8"
   },
