--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Dependencies
-/node_modules
+/node_modules/
 /.pnp
 .pnp.js
 
@@ -27,6 +27,7 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
+.env.local.example
 
 # Vercel
 .vercel
