--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,23 @@
-# Dependencies
-/node_modules/
-/.pnp
-.pnp.js
+# Node/Next.js
+node_modules/
+.next/
+out/
 
-# Testing
-/coverage
+# Env files
+.env
+.env.local
+.env.*.local
 
-# Next.js
-/.next/
-/out/
-
-# Production
-/build
-
-# Misc
-.DS_Store
-*.pem
-
-# Debug
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
-# Local env files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-.env.local.example
+# OS / Editor
+.DS_Store
+.idea/
+.vscode/
 
-# Vercel
+# Misc
 .vercel
-
-# TypeScript
-*.tsbuildinfo
-next-env.d.ts
