--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@tanstack/react-query": "5.59.15",
     "axios": "1.7.7",
     "clsx": "2.1.1",
-    "next": "^14.2.10",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "next": "14.2.10",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "sonner": "1.5.0",
     "zod": "3.23.8"
   },
@@ -24,7 +24,7 @@
     "@types/react": "18.3.5",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.20",
-    "eslint": "9.14.0",
+    "eslint": "8.57.1",
     "eslint-config-next": "14.2.10",
     "postcss": "8.4.47",
     "tailwindcss": "3.4.13",
